ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low

  * DistUpgrade/{EOL,}ReleaseAnnouncement,
    DistUpgrade/{data,}/window_main.ui,
    data/DistUpgrade.cfg,
    pre-build.sh:    
    - updated for 14.10->15.04
  * DistUpgrade/DistUpgradeController.py:
    - do not abort when debsig-verify is installed anymore, the
      package does not cause trouble anymore

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 14:06:53 +0100

ubuntu-release-upgrader (1:14.10.9) utopic; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - fix crash when one of the sources.list entries gives a network
      error (LP: #1347834)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Oct 2014 10:12:27 -0400

ubuntu-release-upgrader (1:14.10.8) utopic; urgency=medium

  [ Brian Murray ]
  * data/removal_blacklist.cfg: make update-manager blacklist entry more
    specific so it does not match update-manager-kde. (LP: #1313165)

  [ Harald Sitter ]
  * DistUpgradeViewKDE mark byte strings correctly to avoid a TypeError
    on diff processing LP: #1375088

 -- Harald Sitter <apachelogger@kubuntu.org>  Mon, 20 Oct 2014 12:24:43 +0200

ubuntu-release-upgrader (1:14.10.7) utopic; urgency=low

  * tests/test_dist_upgrade_fetcher_core.py:
    - fix ADT test

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Aug 2014 11:19:18 +0200

ubuntu-release-upgrader (1:14.10.6) utopic; urgency=medium

  [ Martin Pitt ]
  * check-new-release-gtk: Fix deprecated Gio.Settings constructor invocation.

  [ Brian Murray ]
  * Fix test failure with DistUpgradeFetcherCore test by switching from
    precise to trusty.
  * DistUpgrade/DistUpgradeApport.py:
    - log that dependency problems are not reported.
    - all apport versions support --tags now so just add dist-upgrade tag
    - remove redundant ErrorMessage string
    - modify Popen call to set universal_newlines=True (LP: #1357034)

 -- Brian Murray <brian@ubuntu.com>  Thu, 14 Aug 2014 15:40:19 -0700
