@@ -1,5 +1,6 @@
 ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/{EOL,}ReleaseAnnouncement,
     DistUpgrade/{data,}/window_main.ui,
     data/DistUpgrade.cfg,
@@ -8,6 +9,9 @@ ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - do not abort when debsig-verify is installed anymore, the
       package does not cause trouble anymore
+
+  [ Iain Lane ]
+  * Port to VTE 2.91, and update dependency in debian/control
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 14:06:53 +0100
 
